mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: my-namespace
  labels:
    app: mongo
spec:
  ports:
  - port: 27017
    name: mongo
  clusterIP: None
  selector:
    app: mongo
